add main content

--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,10 @@ width: 100%;
     border-bottom: grey;
 }
 
+.main-content{
+    width: 100%;
+    height: calc(100% - 100px);
+    background-image: url(../img/mine.jpg);
+    overflow-y: auto;
+}
+
