--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ p {
 
 }
 
+.nothing{
+    background-color: var(--notify);
+    align-self: center;
+    
+}
+
 .main-content {
     width: 100%;
     height: calc(100% - 94px);
@@ -162,3 +168,4 @@ p {
     top: 50px;
     right: 0;
 }
+
